[package]
name = "locodrive"
version = "0.1.3"
edition = "2018"
authors = ["Fabius Mettner <fabius1705@live.de>", "Niklas Elsbrock <mail@nelsbrock.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/juhu1705/locodrive"
repository = "https://github.com/juhu1705/locodrive"
documentation = "https://juhu1705.github.io/locodrive/doc/locodrive"
description = """
A model railroad connection handler to read message from and write messages to serial port.
"""
keywords = ["model", "railroad"]
categories = ["parsing", "parser-implementations"]

[features]
control = ["tokio", "tokio-serial", "tokio-util", "bytes"]
all = ["control"]

[dependencies]
tokio-serial = { version = "5.4", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = { version = "1", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "sync", "time"], optional = true }
